name:                jabara-wunderlist-client
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Jabaraster
maintainer:          ah@jabara.info
copyright:           2016 Jabaraster
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Jabara.Wunderlist.Client
                     , Jabara.Wunderlist.Client.Types
  build-depends:       base >= 4.7 && < 5
                     , text
                     , jabara-util
                     , http-client
                     , http-conduit
                     , aeson
                     , lens
                     , aeson-lens
                     , bytestring
                     , vector
                     , scientific
                     , time
  default-language:    Haskell2010

executable wt
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , jabara-util
                     , http-client
                     , http-conduit
                     , aeson
                     , lens
                     , aeson-lens
                     , bytestring
                     , vector
                     , scientific
                     , time
                     , containers
                     , jabara-wunderlist-client
  default-language:    Haskell2010

test-suite jabara-wunderlist-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jabara-wunderlist-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jabaraster/jabara-wunderlist-client
